Fix: Fixed value overflow
Fixed cookie value text overshoot the required space. Its now overflowen scroll on the cell

--- a/src/components/Tabel/Style.css
+++ b/src/components/Tabel/Style.css
@@ -14,4 +14,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 15px 0;
+    gap: 10px;
+    white-space: wrap;
+}
+
+.table-cell{
+    color: #fff;
+    padding: 0 5px;
+    white-space: wrap;
+    overflow: scroll;
 }
